# cardinal

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  QuickLookOptimize.md  README.md
.github/workflows/: frontend-ci.yml  rust-ci.yml
cardinal/: README.md  package-lock.json  package.json
cardinal-sdk/: Cargo.toml
cardinal-sdk/examples/: fs_visit.rs
cardinal-sdk/src/: database.rs  event.rs  event_flag.rs  fs_visit.rs  lib.rs  main.rs
cardinal-sdk/src/fsevent/: event_flag.rs  event_stream.rs
cardinal-sdk/tests/: integration_event_utils.rs
cardinal-syntax/src/: lib.rs
cardinal-syntax/tests/: common.rs  filters.rs  mega_boolean.rs  optimizer.rs  optimizer_metadata_tail.rs  regex_prefix.rs  stress_cases.rs
cardinal/src/: App.css  App.jsx  App.tsx  index.ts  main.tsx  theme.ts
cardinal/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
cardinal/src-tauri/capabilities/: default.json  desktop.json
cardinal/src-tauri/src/: background.rs  commands.rs  lib.rs  lifecycle.rs  main.rs  quicklook.rs  tray.rs
cardinal/src/components/: ColumnHeader.jsx  ContextMenu.jsx  FSEventsPanel.jsx  FSEventsPanel.tsx  FileRow.jsx  FileRow.tsx  MiddleEllipsis.jsx  MiddleEllipsisHighlight.jsx  MiddleEllipsisHighlight.test.ts  MiddleEllipsisHighlight.tsx  PreferencesOverlay.tsx  Scrollbar.jsx  StateDisplay.jsx  StatusBar.jsx  StatusBar.tsx  ThemeSwitcher.tsx  VirtualList.jsx  VirtualizedRow.jsx
cardinal/src/constants/: index.js
cardinal/src/hooks/: index.js  useColumnResize.js  useContextMenu.js  useContextMenu.ts  useDataLoader.js  useFileSearch.ts  usePreventRefresh.js  useScrollbarSync.js
cardinal/src/i18n/resources/: de.json  en.json  es.json  fr.json  ja.json  zh.json
cardinal/src/types/: ipc.ts
cardinal/src/utils/: format.js
doc/: AGENTS.md  README.md  cli.md  optimizations.md  search-syntax.md  testing.md  todo.md
examples/: tree.rs
fs-icon/src/: lib.rs
fs-icon/tests/: additional.rs
fswalk/: Cargo.toml
fswalk/src/: lib.rs
fswalk/tests/: deep_walk.rs
lsf/: Cargo.toml
lsf/src/: cache.rs  cli.rs  main.rs  persistent.rs  search_cache.rs
namepool/: Cargo.toml
namepool/src/: lib.rs
namepool/tests/: fuzz_large.rs
query-segmentation/src/: lib.rs
search-cache/: Cargo.toml
search-cache/src/: cache.rs  highlight.rs  lib.rs  metadata_cache.rs  name_index.rs  persistent.rs  query.rs  segment.rs  slab_node.rs  type_and_size.rs
search-cache/tests/: content_filter_comprehensive.rs  query_matrix_big.rs  search_with_options_multi_segments.rs  search_with_options_path_segments.rs  search_with_options_wildcards.rs
search-cancel/tests/: more.rs
src/: fsevent.rs  fsevent_pb.rs  lib.rs  processor.rs
src/database/: mod.rs
src/database/tests/: db.rs
src/fs_entry/: mod.rs  tests.rs
src/fsevent/: mod.rs
