[package]
name = "cardinal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.52"
bitflags = "1.3.2"
core-foundation = { version = "0.9.2", features = ["mac_os_10_8_features"] }
crossbeam = "0.8.1"
cstr = "0.2.9"
fsevent-sys = "4.0.0"
once_cell = { version = "1.9.0", features = ["parking_lot"] }
parking_lot = "0.11.2"
prost = "0.9.0"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"

[build-dependencies]
prost-build = "0.9.0"
