[package]
name = "cardinal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.52"
bincode = "2.0.0-beta.3"
bitflags = "1.3.2"
core-foundation = { version = "0.9.2", features = ["mac_os_10_8_features"] }
crossbeam = "0.8.1"
cstr = "0.2.9"
flate2 = { version = "1.0.22", features = ["zlib"] }
fsevent-sys = "4.1.0"
once_cell = { version = "1.9.0", features = ["parking_lot"] }
parking_lot = "0.11.2"
time = "0.3.5"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
walkdir = "2.3.2"
pathbytes = {path= "pathbytes"}
serde = { version = "1.0.135", features = ["derive"] }

[dev-dependencies]
chrono = "0.4.19"
ctrlc = "3.2.1"
serde_json = "1.0.78"
tempfile = "3.3.0"
time = { version = "0.3.7", features = ["formatting"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
