[package]
name = "cardinal-sdk"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bincode = "2.0.0"
rand = "0.8.5"
walkdir = "2.3.2"
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
tokio = { version = "1.17.0", features = ["full"] }
crossbeam-channel = "0.5.6"
ignore = "0.4.20"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
num_cpus = "1.15.0"
serde = { version = "1", features = ["derive"] }
pathbytes = { path = "../pathbytes" }
bitflags = "1.3.2"
# fsevent-sys = "4.1.0"
fsevent-sys.git = "https://github.com/ldm0/fsevent-rust"
time = "0.3.19"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
core-foundation = { version = "0.9.2", features = ["mac_os_10_8_features"] }
dispatch2 = { version = "0.2.0", default-features = true, features = ["alloc"] }
