[package]
name = "cardinal"
version = "0.1.12"
description = "Cardinal is a cross platform file searching tool"
authors = ["ldm2993593805@163.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cardinal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5.15"
anyhow = "1.0.97"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rayon = "1.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSPanel", "NSResponder", "NSEvent", "NSMenu"] }
objc2-quick-look-ui = "0.3"
block2 = "0.6"
parking_lot = "0.12"
tauri-plugin-prevent-default = "4"
directories = "6.0.0"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-window-state = "2"
once_cell = { version = "1.20", features = ["parking_lot"] }

cardinal-sdk.path = "../../cardinal-sdk"
search-cache.path = "../../search-cache"
fswalk.path = "../../fswalk"
fs-icon.path = "../../fs-icon"
search-cancel.path = "../../search-cancel"

[features]
default = []
# https://v2.tauri.app/develop/debug/#enable-devtools-feature
dev = ["tauri/devtools"]
